@@ -18,6 +18,7 @@ ChangeLog
 2009???? - 1.24.92
 
 [-] * Fix distutils build (bug #916).
+[-] * Detect when phone does not support ATE1 (bug #918).
     
 20090527 - 1.24.91
 
